# BB-Skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
bb_skills_adapters/: __init__.py  amazon_q.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  windsurf.py
docs/proposals/: cli-capture-extensions.md
docs/superpowers/plans/: 2026-04-02-bb-skills-restructure.md
docs/superpowers/specs/: 2026-04-02-bb-skills-restructure-design.md
scripts/: buildbetter-context.py
scripts/bash/: buildbetter-context.sh
scripts/powershell/: buildbetter-context.ps1
skills/core/: pack.yml
skills/core/bb-skills-update/: SKILL.md
skills/self-improvement/: pack.yml
skills/self-improvement/pr-review-retrospective/: SKILL.md
skills/self-improvement/steering-capture/: SKILL.md
skills/self-improvement/steering-review/: SKILL.md
skills/spec-workflow/: pack.yml
skills/spec-workflow/analyze/: SKILL.md
skills/spec-workflow/bb-analyze/: SKILL.md
skills/spec-workflow/bb-checklist/: SKILL.md
skills/spec-workflow/bb-clarify/: SKILL.md
skills/spec-workflow/bb-constitution/: SKILL.md
skills/spec-workflow/bb-implement/: SKILL.md
skills/spec-workflow/bb-plan/: SKILL.md
skills/testing/: pack.yml
src/bb_skills_cli/: __init__.py  __main__.py  manifest.py
templates/: buildbetter-config.conf  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
tests/: __init__.py  test_adapters.py  test_buildbetter_context.py  test_cli.py
(+16 files in other folders)
